// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewportBlock overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  color: #333;
  background-color: #f3f3f3;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px inset;
}

.emotion-6:disabled {
  color: #aaa;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  width: 100%;
  overflow: auto;
  padding-top: 16px;
  padding-bottom: 32px;
  padding-left: 4px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 320px;
  padding-bottom: 8px;
}

.emotion-9:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 320px;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  all: unset;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #e6e6e6;
  font-weight: 700;
}

.emotion-18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 375px;
  padding-bottom: 8px;
}

.emotion-18:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 375px;
}

.emotion-27 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 768px;
  padding-bottom: 8px;
}

.emotion-27:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-29 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 768px;
}

.emotion-36 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 1024px;
  padding-bottom: 8px;
}

.emotion-36:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-38 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 1024px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  style="display: inline-block;"
                >
                  <button
                    class="emotion-6"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-11"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  320px
                </span>
              </div>
              <div
                class="emotion-18"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-20"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  375px
                </span>
              </div>
              <div
                class="emotion-27"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-29"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  768px
                </span>
              </div>
              <div
                class="emotion-36"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-38"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  1024px
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ViewportBlock sizes snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  color: #333;
  background-color: #f3f3f3;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px inset;
}

.emotion-6:disabled {
  color: #aaa;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  width: 100%;
  overflow: auto;
  padding-top: 16px;
  padding-bottom: 32px;
  padding-left: 4px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 192px;
  padding-bottom: 8px;
}

.emotion-9:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 192px;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  all: unset;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #e6e6e6;
  font-weight: 700;
}

.emotion-18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  min-height: 100%;
  min-width: unset;
  padding-right: 32px;
  width: 280px;
  padding-bottom: 8px;
}

.emotion-18:hover>.hoverbox-text {
  color: #69768C;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-bottom: 0;
  width: 280px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  style="display: inline-block;"
                >
                  <button
                    class="emotion-6"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-11"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  xsmall
                </span>
              </div>
              <div
                class="emotion-18"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-20"
                    data-testid="story"
                  >
                    <div
                      class="emotion-1"
                      id=""
                    >
                      <div
                        class="emotion-2"
                      />
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="emotion-14"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container emotion-15"
                          >
                            <svg
                              aria-label="example donut graphic"
                              class="emotion-16"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text emotion-17"
                >
                  small
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
